Made improvements